[package]
name = "openjp2"
authors = ["Robert G. Jakabosky <rjakabosky+neopallium@neoawareness.com>"]
version = "0.6.2"
license = "BSD-2-Clause"
description = "Rust port of Openjpeg."
repository = "https://github.com/Neopallium/openjp2"
homepage = "https://github.com/Neopallium/openjp2/tree/master/openjp2-rs"
documentation = "https://docs.rs/openjp2"
keywords = ["j2k", "jp2", "jpeg2000", "image"]
edition = "2018"
autobins = false

exclude = ["CMakeLists.txt", "samples/*"]

[workspace]
members = ["tools", "libtiff-sys"]

[lib]
name = "openjp2"
crate-type = ["cdylib", "staticlib", "rlib"]

[[test]]
name = "file_stream"
path = "tests/file_stream.rs"
required-features = ["file-io"]

[dependencies]
bitflags = "1.3.2"
byteorder = { version = "1.5" }
libc = { version = "0.2", optional = true }
log = "0.4.17"
sprintf = "0.1.3"

smallvec = "1.13"

[features]
default = ["file-io", "c_api"]

file-io = ["libc"]

# FOR INTERNAL TESTING PURPOSES ONLY
test_malloc = []

c_api = []

jpwl = []
jpspec = []
