[package]
name = "libtiff-sys"
version = "0.1.0"
edition = "2021"
links = "tiff"
description = "Low-level Rust bindings for libTIFF"
license = "MIT"

# Enable build scripts
build = "build.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"

[lib]
crate-type = ["cdylib"]
