[package]
name = "openjp2-tools"
edition = "2018"

[[bin]]
name = "opj_dump"
path = "src/bin/opj_dump.rs"

[dependencies]
openjp2 = { path = "../", features = ["file-io"] }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
libc = "0.2"

lcms2 = { version = "6.1", optional = true }
env_logger = "0.11.5"

[features]
default = ["lcms2"]
