[package]
name = "openjp2-tools"
edition = "2018"

[[bin]]
name = "opj_dump"
path = "src/bin/opj_dump.rs"

[dependencies]
openjp2 = { path = "../", features = ["file-io"] }
log = "0.4"
libc = "0.2"

image = { version = "0.25", features = [
    "png",
    "tiff",
    "jpeg",
    "pnm",
    "bmp",
    "tga",
] }

lcms2 = { version = "6.1", optional = true }
env_logger = "0.11.5"

libtiff-sys = { path = "../libtiff-sys", optional = true }

[features]
default = ["lcms2", "libtiff-sys"]
