[package]
name = "openjp2-tools"
edition = "2018"

[[bin]]
name = "opj_dump"
path = "src/bin/opj_dump.rs"

[dependencies]
openjp2 = { path = "../", features = ["file-io"] }
log = "0.4"
libc = "0.2"

image = { version = "0.25", default-features = false, features = [
    "png",
    "tiff",
    "jpeg",
    "pnm",
    "bmp",
    "tga",
] }

lcms2 = { version = "6.1", optional = true }
env_logger = "0.11.5"

libtiff-sys = { path = "../libtiff-sys", optional = true }

libpng-sys = { version = "1.1.10", optional = true }

lodepng = { version = "3.10.7", default-features = false, optional = true }
rgb = { version = "0.8.50", optional = true }
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
rand = "0.8.5"

[features]
default = ["lcms2", "testing"]
#default = ["lcms2"]

test_malloc = [
  "openjp2/test_malloc"
]

rust_backend = [
  "image/tiff",
]

libtiff = [
  "libtiff-sys",
]

libpng = [
  "libpng-sys",
]

lodepng = [
  "dep:lodepng",
  "rgb",
]

testing = [
  "libtiff",
  "libpng",
]
